--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -100,7 +100,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.team.dna2.serviceDesk_client.Main</mainClass>
+					<mainClass>org.team.dna2.serviceDesk_client.controllers.ClientApplication</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -117,7 +117,7 @@
 							<transformers>
 								<transformer
 										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.team.dna2.serviceDesk_client.Main</mainClass>
+									<mainClass>org.team.dna2.serviceDesk_client.controllers.ClientApplication</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -125,6 +125,15 @@
 				</executions>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.fxml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
