--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -71,7 +71,17 @@
 			<artifactId>javafx-maven-plugin</artifactId>
 			<version>0.0.5</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
