--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -113,7 +113,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.team.dna2.serviceDesk_client.controllers.ClientApplication</mainClass>
+					<mainClass>team.dna2.serviceDesk_client.Main</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -130,7 +130,7 @@
 							<transformers>
 								<transformer
 										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.team.dna2.serviceDesk_client.controllers.ClientApplication</mainClass>
+									<mainClass>team.dna2.serviceDesk_client.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
