--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -84,6 +84,14 @@
 			<artifactId>spring-boot-maven-plugin</artifactId>
 			<version>2.4.4</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>9.0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
