Update README, pom.xml. Package building

--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>serviceDesk_client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>serviceDesk_client</name>
+	<packaging>jar</packaging>
 	<description>Client part for Service Desk UDV Project with Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
@@ -123,27 +124,6 @@
 				<configuration>
 					<mainClass>team.dna2.serviceDesk_client.Main</mainClass>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.0.0</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<transformers>
-								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>team.dna2.serviceDesk_client.Main</mainClass>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 
