--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>team.dna2</groupId>
 	<artifactId>serviceDesk_client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>serviceDesk_client</name>
 	<packaging>jar</packaging>
 	<description>Client part for Service Desk UDV Project with Spring Boot</description>
@@ -79,13 +79,6 @@
 			<version>0.0.5</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-			<version>2.4.4</version>
-		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
 		<dependency>
 			<groupId>com.jfoenix</groupId>
@@ -101,6 +94,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<executable>true</executable>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
