--- a/serviceDesk_server/pom.xml
+++ b/serviceDesk_server/pom.xml
@@ -20,6 +20,21 @@
 	</properties>
 
 	<dependencies>
+
+<!--		Temporary by Guide-->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.2.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+<!--		Temporary by Guide-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
