--- a/serviceDesk_server/src/main/resources/application.properties
+++ b/serviceDesk_server/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=true
 
 server.port=8080
+
+#Tempo by Guide
+
+spring.mvc.view.prefix = src/main/webapp/WEB-INF/jsp/
+spring.mvc.view.suffix = .jsp
