--- a/serviceDesk_server/src/main/resources/application.properties
+++ b/serviceDesk_server/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.jpa.show-sql=true
 
 server.port=8080
 
-#Tempo by Guide
+#Session store type:
+spring.session.store-type=jdbc
 
-spring.mvc.view.prefix = src/main/webapp/WEB-INF/jsp/
-spring.mvc.view.suffix = .jsp
