--- a/serviceDesk_server/src/main/resources/application.properties
+++ b/serviceDesk_server/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.show-sql=true
 server.port=8080
 
 #Session store type:
-spring.session.store-type=jdbc
+#spring.session.store-type=jdbc
 
