Multiple DB and Entities fixes (READ COMMENT)
Minor fixes:
-Обновлены properties
-Сервер порт теперь 8888 (!)
-Несколько минорных изменений названий полей в классах сущностей (НО НЕ В ТАБЛИЦАХ)

Major fixes:
-Сущность User Session Tokens убрана на паузу, код закомментирован, в БД ее тоже нет
-RecordTypeEnum обновлен
-TicketStatusEnum - теперь окончательно Deprecated, убраны все упоминания в коде
-Многим полям сущностей выдано свойство Updatable=False. В ряде случаев это сделано для выполнения бизнес-логики системы, в других для того, чтобы избежать проблем с каскадностью
-Добавлена сущность Ticket Status, для нее добавлена таблица в БД - COMPENDIUM_TICKET_STATUS
-В сущности Ticket и Comment добавлено поле последнего изменения (Record Change)
-Обновлено поле Status у Ticket, теперь это объект класса TicketStatus

--- a/serviceDesk_server/src/main/resources/application.properties
+++ b/serviceDesk_server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=service-desk-server
-
-# Database  #
+#
+## Database properties:
+#
 
 spring.datasource.url=jdbc:postgresql://ec2-54-154-101-45.eu-west-1.compute.amazonaws.com:5432/d9lr5qb0c7blfa
 spring.datasource.username=qhaedobnoujikn
@@ -10,8 +10,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=true
 
-server.port=8080
+#
+## Server App properties:
+#
 
-#Session store type:
-#spring.session.store-type=jdbc
+server.port=8888
+spring.application.name=service-desk-server
+
+#
+## Session store type:
+#
+
+spring.session.store-type=jdbc
 
