--- a/serviceDesk_client/pom.xml
+++ b/serviceDesk_client/pom.xml
@@ -107,6 +107,10 @@
 			<version>20210307</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 	</dependencies>
 
