POST for tickets added + TicketRequest model added + entity fixes

--- a/serviceDesk_server/pom.xml
+++ b/serviceDesk_server/pom.xml
@@ -83,7 +83,11 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
